# lighthouse-test

./: .gitignore  README.md  app.py  makefile  pyproject.toml  pyrightconfig.json
src/: stack.py
src/functions/: create_task.py  delete_task.py  get_task.py  update_task.py
src/functions/core/: app.py  dynamodb.py  exceptions.py  models.py
tests/: integration_test.py
